--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,5 @@
+$header-bg-color: #000000 !default;
+$header-bg-color-secondary: #ffffff !default;
 @import "{{ site.theme }}";
 
 $header-bg-color: #000000 !default;
