--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,3 @@
-$header-bg-color: #000000 !default;
-$header-bg-color-secondary: #ffffff !default;
+$header-bg-color: #000000;
+$header-bg-color-secondary: #ffffff;
 @import "{{ site.theme }}";
