--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,3 @@
-$header-bg-color: #000000;
-$header-bg-color-secondary: #ffffff;
+$header-bg-color: #000;
+$header-bg-color-secondary: #fff;
 @import "{{ site.theme }}";
