--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,3 +1,7 @@
 $header-bg-color: #000;
 $header-bg-color-secondary: #fff;
 @import "{{ site.theme }}";
+.page-header {
+  background-color: $header-bg-color;
+  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
+}
