--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,5 +3,5 @@ $header-bg-color-secondary: #fff;
 @import "{{ site.theme }}";
 .page-header {
   background-color: $header-bg-color;
-  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color);
+  background-image: linear-gradient(120deg, #000, #fff);
 }
