--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,8 @@
 $header-bg-color: #000;
 $header-bg-color-secondary: #fff;
+---
+---
+
 @import "{{ site.theme }}";
 .page-header {
   background-color: $header-bg-color;
