--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,5 +1,5 @@
 ---
 ---
-$header-bg-color: #000;
-$header-bg-color-secondary: #fff;
+$header-bg-color: #f9f71e;
+$header-bg-color-secondary: #fff0fb;
 @import "{{ site.theme }}";
