--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,4 +2,5 @@
 ---
 $header-bg-color: #f9f71e;
 $header-bg-color-secondary: #fff0fb;
+$section-headings-color: #ff8cd7
 @import "{{ site.theme }}";
