--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,5 +5,5 @@ $header-bg-color-secondary: #fff0fb;
 $section-headings-color: #ff8cd7
 @import "{{ site.theme }}";
 .page-header {
-  background-image: linear-gradient(120deg, $header-bg-color-secondary, #d3bf4e, 30%$header-bg-color);
+  background-image: linear-gradient(120deg, $header-bg-color-secondary, #d3bf4e, 30%,$header-bg-color);
 }
