--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,7 +2,7 @@
 ---
 $header-bg-color: #f9f71e;
 $header-bg-color-secondary: #fff0fb;
-$section-headings-color: #ff8cd7
+$section-headings-color: #ff8cd7;
 @import "{{ site.theme }}";
 $header-bg-color-tertiary: #d3bf4e;
 .page-header {
