--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -4,7 +4,6 @@ $header-bg-color: #f9f71e;
 $header-bg-color-secondary: #fff0fb;
 $section-headings-color: #ff8cd7;
 @import "{{ site.theme }}";
-$header-bg-color-tertiary: #d3bf4e;
 .page-header {
-  background-image: linear-gradient(120deg, $header-bg-color-secondary, $header-bg-color-tertiar, 30%,$header-bg-color);
+  background-image: linear-gradient(120deg, $header-bg-color-secondary, #d3bf4e, 30%,$header-bg-color);
 }
