--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,10 @@
     <header class="page-header" role="banner">
       <h1 class="project-name">{{ page.title | default: site.title | default: site.github.repository_name }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</h2>
+        <a href="https://doc.misskirara.net/" class="btn">Home</a>
+        <a href="https://doc.misskirara.net/release/" class="btn">Release Note</a>
+        <a href="https://doc.misskirara.net/custom_emoji/" class="btn">Emoji</a>
+        <a href="https://doc.misskirara.net/nsfw/" class="btn">NSFW</a>
         <a href="https://misskirara.net/" class="btn">Go to Misskirara</a>
 
     </header>
