--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,3 +7,9 @@ $section-headings-color: #ff8cd7;
 .page-header {
   background-image: linear-gradient(120deg, $header-bg-color-secondary, #d3bf4e, 30%,$header-bg-color);
 }
+.btn{
+  color:#ff8cd7;
+}
+.gotomisskirara{
+  background-color:#F2E4EE;
+}
