--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         <a href="https://doc.misskirara.net/release/" class="btn">Release Note</a>
         <a href="https://doc.misskirara.net/custom_emoji/" class="btn">Emoji</a>
         <a href="https://doc.misskirara.net/nsfw/" class="btn">NSFW</a>
-        <a href="https://misskirara.net/" class="btn">Go to Misskirara</a>
+        <a href="https://misskirara.net/" class="btn,gotomisskirara">Go to Misskirara</a>
 
     </header>
 
