--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,12 +8,12 @@ $section-headings-color: #ff8cd7;
   background-image: linear-gradient(120deg, $header-bg-color-secondary, #d3bf4e, 30%,$header-bg-color);
 }
 .btn{
-  color:#F2E4EE;
-}
-.btn.hover{
-  color:#ff8cd7;
+  color:#ffa3ff;
+  &:hover {
+    color:#ff8cd7;
+  }
 }
 
-//.gotomisskirara{
- // background-color:#F2E4EE;
-//}
+.gotomisskirara{
+  background-color:#F2E4EE;
+}
