--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,8 +18,9 @@ $section-headings-color: #ff8cd7;
 
 .gotomisskirara{
   color:#f9f71e;
-  background-color:#F2E4EE;
+  background-color:#ff8cd7;
     &:hover {
-    color:#ff8cd7;
+    color:#f9f71e;
+    background-color:#ff8cd7;
   }
 }
